Fix flag layout on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -288,12 +288,6 @@
   align-items: center;
   justify-content: center;
 }
-.mainContainer_button-back-results {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
 
 .theCard {
   position: absolute;
@@ -332,13 +326,7 @@
     align-items: center;
   }
   .mainContainer_button-next-prev {
-    margin-top: 300px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
-  .mainContainer_button-back-results {
+    margin-top: 340px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -374,13 +362,7 @@
     align-items: center;
   }
   .mainContainer_button-next-prev {
-    margin-top: 350px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
-  .mainContainer_button-back-results {
+    margin-top: 390px;
     display: flex;
     flex-direction: row;
     align-items: center;
